Update Week 2 Assignment.ipynb
Updated to Show the Series output

--- a/Week 2 Assignment.ipynb
+++ b/Week 2 Assignment.ipynb
@@ -25,9 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First     0.426076\n",
+      "Second    0.616851\n",
+      "Third     0.667506\n",
+      "Fourth    0.665975\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
